--- a/developer-docs-site/src/css/custom.css
+++ b/developer-docs-site/src/css/custom.css
@@ -171,10 +171,10 @@ b.navbar__title{
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: rgb(255 255 255 / 10%);
+  background-color: rgb(255 255 255 / 5%);
   background-clip: border-box;
   border: 1px solid rgba(0,0,0,.125); 
-  /* border-radius: 0.65rem; */
+  border-radius: 0.65rem;
   /* box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important; */
 }
 
@@ -203,23 +203,35 @@ b.navbar__title{
   /* color: #495057; */
   text-align: inherit;
 }
-.list-group-item-action:focus,
-.list-group-item-action:hover {
+
+.list-group-item-action:focus, .list-group-item-action:hover {
   z-index: 1;
   /* color: #495057; */
   text-decoration: none;
-  background-color: #ebedf0;
+  background-color: #f0ebec;
 }
+
+/* html[data-theme='light'] .list-group-item-action:focus, .list-group-item-action:hover {
+  background-color: var(--ifm-color-primary-light);
+}
+
+ html[data-theme='dark'] .list-group-item-action:focus, .list-group-item-action:hover {
+  background-color: var(--ifm-color-gray-800);
+} */
+
 .list-group-item-action:active {
   color: #212529;
-  background-color: #ebedf0; 
+ /* background-color: #ebedf0; */
 }
+
+
 .list-group-item {
   position: relative;
   display: block;
   padding: 0.5rem 1rem;
  /* color: #212529; */
   text-decoration: none;
+  margin-bottom: 0.9rem;
  /* background-color: #fff; */
   /* border: 1px solid rgba(0, 0, 0, 0.125); */
 }
@@ -501,12 +513,12 @@ b.navbar__title{
 }
 .list-group-item-dark {
   color: #141619;
-  background-color: #d3d3d4;
+  background-color: #5e5d5d;
 }
 .list-group-item-dark.list-group-item-action:focus,
 .list-group-item-dark.list-group-item-action:hover {
   color: #141619;
-  background-color: #bebebf;
+  background-color: #5e5d5d;
 }
 .list-group-item-dark.list-group-item-action.active {
   color: #fff;
