--- a/developer-docs-site/src/css/custom.css
+++ b/developer-docs-site/src/css/custom.css
@@ -361,6 +361,15 @@ b.navbar__title{
   margin-bottom: 0;
   border-radius: 0.25rem;
 }
+
+.list-group-item small {
+  color: black;
+}
+
+html[data-theme='dark'] .list-group-item small {
+  color: white;
+}
+
 .list-group-item-action {
   width: 100%;
   /* color: #495057; */
